P01/Tests/SyntaxErrors/noalphabet.tm
states 3
A
B +
C -
g
